# rocket_template_api

./: Cargo.toml  Makefile  docker-compose.yml  readme.md
src/: main.rs
src/core/: api_responses.rs  mod.rs
src/user/: errors.rs  mod.rs  repository.rs  routes.rs  service.rs
src/user/db/mock/: user_db_mock.rs
src/user/db/mongo/: mod.rs  user.rs  user_db_mock.rs  user_mongo.rs
src/user/db/traits/: mod.rs  user.rs  user_db_trait.rs
src/user/models/: mod.rs  user.rs
src/user/models/use_case/: user.rs
