[package]
name = "example_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket_contrib = "0.4.11"
serde = "1.0"
serde_json = "1.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
uuid = "0.8.2"
